--- a/css/main.css
+++ b/css/main.css
@@ -1,510 +1,87 @@
 * {
   margin: 0;
   padding: 0;
-}
-
-body {
-  max-width: 100%;
-  max-height: 100%;
-  background-color: #222;
-  padding: 20px;
-}
-
-h1,
-h2,
-h3,
-h4 {
   font-family: "Poppins", Arial, Helvetica, sans-serif;
-  font-weight: 600;
-  color: #f5f5f5;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.header {
+  background: #222 !important;
 }
 
 p {
-  color: #ddd;
-  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  line-height: 18px;
 }
 
-/*--------HEADER------------*/
-header {
-  width: -webkit-fill-available;
-  width: -moz-available;
-  width: stretch;
-  padding: 10px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999;
-  background-color: #222;
-  -webkit-box-shadow: 0 0 10px 0 #00000014;
-  box-shadow: 0 0 10px 0 #00000014;
+h2 {
+  font-size: 20px !important;
+  line-height: 24px !important;
 }
 
-header .my-logo {
-  float: left;
-  width: 50%;
+h5 {
+  font-size: 16px !important;
+  line-height: 20px !important;
 }
 
-header .my-logo img {
+/*.navbar-expand-lg .navbar-nav .nav-link*/
+.navbar-brand img {
   width: 100px;
   height: 100px;
-  margin: 0;
   border-radius: 50%;
 }
 
-header .header-menu ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  overflow: hidden;
+.navbar-expand-lg .navbar-nav .nav-link {
+  color: #ddd;
 }
 
-header .header-menu ul a {
-  display: block;
-  padding: 14px;
-  color: #969595;
-  font-size: 15px;
-  font-family: "Poppins", Arial, Helvetica, sans-serif;
-  text-decoration: none;
+.navbar-expand-lg .navbar-nav .nav-link:hover {
+  color: #0f59d2;
 }
 
-header .header-menu ul a:hover {
-  background-color: #f5f5f5;
-  color: #222;
-}
-
-header .header-menu ul .current-dir {
-  color: #f5f5f5;
-}
-
-header .header-menu ul .current-dir:hover {
-  background-color: #f5f5f5;
-  color: #222;
-}
-
-header .header-menu .menu {
-  clear: both;
-  max-height: 0;
-  -webkit-transition: max-height 0.2s ease-out;
-  transition: max-height 0.2s ease-out;
-}
-
-header .header-menu .menu-icon {
-  padding: 28px 20px;
-  position: relative;
-  float: right;
-  cursor: pointer;
-}
-
-header .header-menu .menu-icon .nav-icon {
-  background-color: #f5f5f5;
-  display: block;
-  border-radius: 2px;
-  height: 6px;
-  width: 26px;
-  position: relative;
-  -webkit-transition: background 0.2s ease-out;
-  transition: background 0.2s ease-out;
-}
-
-header .header-menu .menu-icon .nav-icon:before {
-  background-color: #f5f5f5;
-  display: block;
-  border-radius: 2px;
-  content: "";
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  -webkit-transition: all 0.2s ease-out;
-  transition: all 0.2s ease-out;
-  top: 8px;
-}
-
-header .header-menu .menu-icon .nav-icon:after {
-  background-color: #f5f5f5;
-  display: block;
-  border-radius: 2px;
-  content: "";
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  -webkit-transition: all 0.2s ease-out;
-  transition: all 0.2s ease-out;
-  top: -8px;
-}
-
-header .header-menu .menu-btn {
-  display: none;
-}
-
-header .header-menu .menu-btn:checked ~ .menu {
-  max-height: 260px;
-}
-
-header .header-menu .menu-btn:checked ~ .menu-icon .nav-icon {
-  background: transparent;
-}
-
-header .header-menu .menu-btn:checked ~ .menu-icon .nav-icon:before {
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  top: 0;
-}
-
-header .header-menu .menu-btn:checked ~ .menu-icon .nav-icon:after {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  top: 0;
-}
-
-/*-----HOME PAGE------*/
-main {
-  padding-top: 120px;
-}
-
-main .main-top {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-main .main-top .main-left {
-  width: 40%;
-}
-
-main .main-top .main-left img {
-  width: auto;
+/*---HOME PAGE---*/
+.img-left {
+  width: 200px;
   height: 200px;
-  border-radius: 50%;
   border: 20px solid #5e5e5e;
   -webkit-box-shadow: 0px 4px 100px 0 #000;
   box-shadow: 0px 4px 100px 0 #000;
 }
 
-main .main-top .main-right {
-  width: 60%;
-}
-
-main .main-top .main-right h4 {
-  font-size: 16px;
-  color: #aaa;
-  font-weight: 300;
-  margin-bottom: 10px;
-}
-
-main .main-top .main-right h1 {
-  font-size: 47px;
-  margin-bottom: 10px;
-}
-
-main .main-top .main-right p {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
-  color: #d5d5d5;
-  width: 90%;
-  margin-bottom: 10px;
-}
-
-main .main-top .main-right button {
-  font-family: "Poppins";
-  background-color: #333;
-  color: #ddd;
-  padding: 8px 24px;
-  -webkit-box-shadow: 0 10px 10px -8px #000000c7;
-  box-shadow: 0 10px 10px -8px #000000c7;
-  border-radius: 20px;
-  font-size: 14px;
-  border: 2px solid #ddd;
-  margin-left: 5px;
-  outline: none;
-}
-
-main .main-top .main-right button:hover {
-  background-color: #007ced;
-  border: 2px solid #007ced;
-}
-
-main .main-top .main-right button:active {
-  background-color: #007ced;
-  border: 2px solid #007ced;
-}
-
-main .main-title {
-  margin-top: 80px;
-}
-
-main .main-title h2 {
-  display: inline-block;
-  position: relative;
-  font-size: 21px;
-  margin: 0 0 30px;
-  z-index: 1;
-  padding-bottom: 7px;
-}
-
-main .main-title h2:before {
-  display: block;
-  position: absolute;
-  content: "";
-  height: 3px;
-  bottom: 0;
-  width: 100%;
-  background-color: #353535;
-}
-
-main .main-title h2:after {
-  display: block;
-  position: absolute;
-  content: "";
-  height: 3px;
-  bottom: 0;
-  width: 30px;
-  background-color: #007ced;
-}
-
-main .main-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-main .main-container .card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 220px;
-}
-
-main .main-container .card .card-image img {
-  height: 36px;
-  width: 36px;
-  margin-top: 10px;
-  margin-right: 10px;
-}
-
-main .main-container .card .break {
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-}
-
-main .main-container .card .card-info {
-  padding: 10px;
-}
-
-main .main-container .card .card-info h4 {
-  font-size: 16px;
-}
-
-main .main-container .card .card-info p {
-  text-align: justify;
-}
-
-main .main-container .card-1,
-main .main-container .card-2,
-main .main-container .card-4 {
-  width: 50%;
-}
-
-main .main-container .contact-phone,
-main .main-container .contact-location,
-main .main-container .contact-email {
-  margin-top: 20px;
-  height: 150px;
-}
-
-/*-----FOOTER-----*/
-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-top: 20px;
-  border-top: 2px solid #333;
-}
-
-footer .social-media-icons {
-  width: 60%;
-  float: left;
-}
-
-footer .social-media-icons a {
-  margin-right: 15px;
-}
-
-footer .copyright {
-  width: 40%;
-  float: right;
-}
-
-/*-------RESUME PAGE--------*/
-.about-main {
-  margin-bottom: 20px;
-  display: -ms-grid;
-  display: grid;
-}
-
-.about-main h1 {
-  margin-bottom: 20px;
-  border-bottom: 2px solid #333;
-}
-
-.about-main iframe {
-  margin-top: 10px;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  height: 500px;
-}
-
-/*--------CONTACT PAGE---------*/
-.contact-main {
-  margin-bottom: 20px;
-  display: -ms-grid;
-  display: grid;
-}
-
-.contact-main h1 {
-  margin-bottom: 20px;
-  border-bottom: 2px solid #333;
-}
-
-.contact-main iframe {
-  margin-top: 10px;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  height: 200px;
-  border: 2px solid #ddd;
-  margin-bottom: 20px;
-}
-
-.contact-main .horiz-line {
-  border: 1px solid #333;
-}
-
-@media only screen and (max-width: 697px) {
-  main .main-top {
-    display: block;
-  }
-  main .main-top .main-left {
-    width: 100%;
-    display: block;
-    text-align: center;
-  }
-  main .main-top .main-left img {
-    height: 250px;
-    border: 20px solid #5e5e5e;
-  }
-  main .main-top .main-right {
-    width: 100%;
-    text-align: center;
-  }
-  main .main-top .main-right h4 {
-    margin-top: 20px;
-  }
-  main .main-top .main-right h1 {
-    font-size: 32px;
-  }
-  main .main-top .main-right p {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  main .main-container {
-    display: block;
-    margin-bottom: 30px;
-  }
-  main .main-container .card {
-    height: auto;
-  }
-  main .main-container .card-1,
-  main .main-container .card-2,
-  main .main-container .card-4 {
-    width: 100%;
-  }
-  footer {
-    display: block;
-    text-align: center;
-  }
-  footer .social-media-icons {
-    width: auto;
-    float: none;
-  }
-  footer .copyright {
-    width: auto;
-    float: none;
+@media (min-width: 768px) {
+  .img-left {
+    width: 400px;
+    height: 400px;
   }
 }
 
-@media only screen and (min-width: 850px) {
-  header {
-    width: -webkit-fill-available;
-    width: -moz-available;
-    width: stretch;
-  }
-  header .my-logo {
-    width: 40%;
-  }
-  header .header-menu .menu-icon {
-    display: none;
-  }
-  header .header-menu .menu {
-    clear: none;
-    float: right;
-    max-height: none;
-    margin-top: 20px;
-  }
-  header .header-menu .menu li {
-    float: left;
-  }
-  header .header-menu .menu li a {
-    padding: 20px 30px;
-  }
-  header .header-menu .menu li a:hover {
-    color: #f5f5f5;
-    background-color: transparent;
-  }
+.name {
+  color: #0f59d2;
 }
 
-@media only screen and (min-width: 900px) {
-  main .main-top {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  main .main-top .main-left {
-    padding-left: 20px;
-    width: 30%;
-  }
-  main .main-top .main-right {
-    padding-right: 20px;
-    width: 600px;
-  }
-  main .main-title {
-    margin-left: 40px;
-  }
-  main .main-container {
-    margin-left: 40px;
-  }
-  main .main-container .card-1,
-  main .main-container .card-2,
-  main .main-container .card-4 {
-    width: 40%;
-  }
-  main .main-container .card-1 {
-    margin-right: 10%;
-  }
-  main .main-container .card .card-info {
-    width: 430px;
-  }
-  footer .social-media-icons {
-    width: 70%;
-  }
-  footer .copyright {
-    width: 30%;
-  }
+.icons i {
+  font-size: 24px;
+  color: #0f59d2;
+}
+
+/*--ABOUT PAGE--*/
+#about {
+  background-color: #222;
+}
+
+.work-content {
+  background-color: #0f59d2;
+}
+
+.work-content i {
+  color: #f5f5f5;
+  font-size: 30px;
+}
+
+.content {
+  color: #f5f5f5;
 }
 /*# sourceMappingURL=main.css.map */
