--- a/css/main.scss
+++ b/css/main.scss
@@ -1,33 +1,8 @@
 $color: #ddd;
 $color1: #f5f5f5;
 $color3: #969595;
+$color4: #5e5e5e;
 $background-color: #222;
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  max-width: 100%;
-  max-height: 100%;
-  background-color: $background-color;
-  padding: 20px;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  font-family: "Poppins", Arial, Helvetica, sans-serif;
-  font-weight: 600;
-  color: $color1;
-}
-
-p {
-  color: $color;
-  font-family: "Poppins", Arial, Helvetica, sans-serif;
-}
 
 @mixin box-shadow(
   $horiz: 10px,
@@ -41,509 +16,93 @@ p {
   box-shadow: $horiz $vert $blur $spread $color;
 }
 
-/*--------HEADER------------*/
-header {
-  width: stretch;
-  padding: 10px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.header {
+  background: $background-color !important;
+}
+
+p {
+  font-size: 14px;
+  line-height: 18px;
+}
+
+h2 {
+  font-size: 20px !important;
+  line-height: 24px !important;
+}
+
+h5 {
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
+
+/*.navbar-expand-lg .navbar-nav .nav-link*/
+.navbar-brand {
+  img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
+}
+
+.navbar-expand-lg {
+  .navbar-nav {
+    .nav-link {
+      color: $color;
+
+      &:hover {
+        color: #0f59d2;
+      }
+    }
+  }
+}
+
+/*---HOME PAGE---*/
+.img-left {
+  width: 200px;
+  height: 200px;
+  border: 20px solid $color4;
+  @include box-shadow(0px, 4px, 100px, 0, #000);
+
+  @media (min-width: 768px) {
+    width: 400px;
+    height: 400px;
+  }
+}
+
+.name {
+  color: #0f59d2;
+}
+
+.icons {
+  i {
+    font-size: 24px;
+    color: #0f59d2;
+  }
+}
+
+/*--ABOUT PAGE--*/
+#about {
   background-color: $background-color;
-  @include box-shadow(0, 0, 10px, 0, #00000014);
-
-  .my-logo {
-    float: left;
-    width: 50%;
-
-    img {
-      width: 100px;
-      height: 100px;
-      margin: 0;
-      border-radius: 50%;
-    }
-  }
-
-  .header-menu {
-    ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      overflow: hidden;
-
-      a {
-        display: block;
-        padding: 14px;
-        color: #969595;
-        font-size: 15px;
-        font-family: "Poppins", Arial, Helvetica, sans-serif;
-        text-decoration: none;
-
-        &:hover {
-          background-color: $color1;
-          color: $background-color;
-        }
-      }
-
-      .current-dir {
-        color: #f5f5f5;
-
-        &:hover {
-            background-color: $color1;
-            color: $background-color;
-        }
-      }
-    }
-
-    .menu {
-      clear: both;
-      max-height: 0;
-      transition: max-height 0.2s ease-out;
-    }
-
-    .menu-icon {
-      padding: 28px 20px;
-      position: relative;
-      float: right;
-      cursor: pointer;
-
-      @mixin hamburger-icon {
-        background-color: $color1;
-        display: block;
-        border-radius: 2px;
-      }
-
-      @mixin hamburger-lines {
-        content: "";
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        transition: all 0.2s ease-out;
-      }
-
-      .nav-icon {
-        @include hamburger-icon();
-        height: 6px;
-        width: 26px;
-        position: relative;
-        transition: background 0.2s ease-out;
-
-        &:before {
-          @include hamburger-icon();
-          @include hamburger-lines();
-          top: 8px;
-        }
-
-        &:after {
-          @include hamburger-icon();
-          @include hamburger-lines();
-          top: -8px;
-        }
-      }
-    }
-
-    .menu-btn {
-      display: none;
-
-      &:checked {
-        ~ .menu {
-          max-height: 260px;
-        }
-
-        ~ .menu-icon {
-          .nav-icon {
-            background: transparent;
-
-            &:before {
-              transform: rotate(-45deg);
-              top: 0;
-            }
-
-            &:after {
-              transform: rotate(45deg);
-              top: 0;
-            }
-          }
-        }
-      }
-    }
-  }
 }
 
-/*-----HOME PAGE------*/
+.work-content {
+  background-color: #0f59d2;
 
-main {
-  padding-top: 120px;
-
-  .main-top {
-    display: flex;
-
-    .main-left {
-      width: 40%;
-
-      img {
-        width: auto;
-        height: 200px;
-        border-radius: 50%;
-        border: 20px solid #5e5e5e;
-        @include box-shadow(0px, 4px, 100px, 0, #000);
-      }
-    }
-
-    .main-right {
-      width: 60%;
-
-      h4 {
-        font-size: 16px;
-        color: #aaa;
-        font-weight: 300;
-        margin-bottom: 10px;
-      }
-
-      h1 {
-        font-size: 47px;
-        margin-bottom: 10px;
-      }
-
-      p {
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 21px;
-        color: #d5d5d5;
-        width: 90%;
-        margin-bottom: 10px;
-      }
-
-      button {
-        font-family: "Poppins";
-        background-color: #333;
-        color: $color;
-        padding: 8px 24px;
-        @include box-shadow(0, 10px, 10px, -8px, #000000c7);
-        border-radius: 20px;
-        font-size: 14px;
-        border: 2px solid $color;
-        margin-left: 5px;
-        outline: none;
-
-        @mixin button-actions {
-            background-color: #007ced;
-            border: 2px solid #007ced; 
-        }
-
-        &:hover {
-            @include button-actions();
-        }
-
-        &:active {
-            @include button-actions();
-        }
-      }
-    }
-  }
-  .main-title {
-    margin-top: 80px;
-
-    h2 {
-      display: inline-block;
-      position: relative;
-      font-size: 21px;
-      margin: 0 0 30px;
-      z-index: 1;
-      padding-bottom: 7px;
-
-      @mixin line {
-        display: block;
-        position: absolute;
-        content: "";
-        height: 3px;
-        bottom: 0;
-      }
-
-      &:before {
-        @include line();
-        width: 100%;
-        background-color: #353535;
-      }
-
-      &:after {
-        @include line();
-        width: 30px;
-        background-color: #007ced;
-      }
-    }
-  }
-
-  .main-container {
-    display: flex;
-    flex-wrap: wrap;
-
-    .card {
-      display: flex;
-      height: 220px;
-
-      .card-image {
-        img {
-          height: 36px;
-          width: 36px;
-          margin-top: 10px;
-          margin-right: 10px;
-        }
-      }
-      .break {
-        flex-basis: 100%;
-      }
-
-      .card-info {
-        padding: 10px;
-
-        h4 {
-          font-size: 16px;
-        }
-
-        p {
-          text-align: justify;
-        }
-      }
-    }
-
-    .card-1,
-    .card-2,
-    .card-4 {
-      width: 50%;
-    }
-
-    .contact-phone,
-    .contact-location,
-    .contact-email {
-        margin-top: 20px;
-        height: 150px;
-    }
-
+  i {
+    color: $color1;
+    font-size: 30px;
   }
 }
-
-/*-----FOOTER-----*/
-
-footer {
-  display: flex;
-  padding-top: 20px;
-  border-top: 2px solid #333;
-
-  .social-media-icons {
-    width: 60%;
-    float: left;
-
-    a {
-      margin-right: 15px;
-    }
-  }
-
-  .copyright {
-    width: 40%;
-    float: right;
-  }
-}
-
-@mixin page-grid {
-    margin-bottom: 20px;
-    display: grid;
-}
-
-@mixin page-heading {
-    margin-bottom: 20px;
-    border-bottom: 2px solid #333;
-}
-
-@mixin iframe-style {
-    margin-top: 10px;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-/*-------RESUME PAGE--------*/
-.about-main {
-    @include page-grid();
-
-    h1 {
-        @include page-heading();
-    }
-
-    iframe {
-        @include iframe-style();
-        height: 500px;
-    }
-}
-
-
-/*--------CONTACT PAGE---------*/
-.contact-main {
-    @include page-grid();
-
-    h1 {
-        @include page-heading();
-    }
-
-    iframe {
-        @include iframe-style();
-        height: 200px;
-        border: 2px solid $color;
-        margin-bottom: 20px;
-    }
-
-    .horiz-line {
-        border: 1px solid #333;
-    }
-
-}
-
-@media only screen and (max-width: 697px) {
-  main {
-    .main-top {
-      display: block;
-      .main-left {
-        width: 100%;
-        display: block;
-        text-align: center;
-        img {
-          height: 250px;
-          border: 20px solid #5e5e5e;
-        }
-      }
-
-      .main-right {
-        width: 100%;
-        text-align: center;
-        h4 {
-          margin-top: 20px;
-        }
-        h1 {
-          font-size: 32px;
-        }
-
-        p {
-          width: 100%;
-          margin-bottom: 20px;
-        }
-      }
-    }
-
-    .main-container {
-      display: block;
-      margin-bottom: 30px;
-
-      .card {
-        height: auto;
-      }
-
-      .card-1,
-      .card-2,
-      .card-4 {
-        width: 100%;
-      }
-    }
-  }
-
-  footer {
-      display: block;
-      text-align: center;
-      @mixin display-change {
-        width: auto;
-        float: none;
-      }
-
-      .social-media-icons {
-          @include display-change();
-      }
-
-      .copyright {
-          @include display-change();
-      }
-  }
-}
-
-@media only screen and (min-width: 850px) {
-  header {
-      width: stretch;
-
-      .my-logo {
-          width: 40%;
-      }
-    .header-menu {
-      .menu-icon {
-        display: none;
-      }
-      .menu {
-        clear: none;
-        float: right;
-        max-height: none;
-        margin-top: 20px;
-
-        li {
-          float: left;
-          a {
-            padding: 20px 30px;
-
-            &:hover {
-                color: $color1;
-                background-color: transparent;
-            }
-          }
-        }
-      }
-    }
-  }
-  
-}
-
-@media only screen and (min-width: 900px) {
-    main {
-        .main-top {
-            justify-content: center;
-            align-items: center;
-            .main-left {
-                padding-left: 20px;
-                width: 30%;
-            }
-
-            .main-right {
-                padding-right: 20px;
-                width: 600px;
-            }
-        }
-
-        .main-title {
-            margin-left: 40px;
-        }
-
-        .main-container {
-            margin-left: 40px;
-            .card-1,
-            .card-2,
-            .card-4 {
-                width: 40%;
-            }
-
-            .card-1 {
-                margin-right: 10%;
-            }
-
-            .card {
-                .card-info {
-                    width: 430px;
-                }
-            }
-        }
-    }
-
-    footer {
-        .social-media-icons {
-            width: 70%;
-        }
-
-        .copyright {
-            width: 30%;
-        }
-    }
+.content {
+  color: $color1;
 }
