--- a/css/main.css
+++ b/css/main.css
@@ -84,4 +84,10 @@ h5 {
 .content {
   color: #f5f5f5;
 }
+
+/*--FOOTER--*/
+footer {
+  background-color: #222;
+  color: #969595;
+}
 /*# sourceMappingURL=main.css.map */
