--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,21 @@ h5 {
   line-height: 20px !important;
 }
 
+button {
+  font-size: 12px;
+  line-height: 15px;
+  cursor: pointer;
+}
+
+button:active {
+  -webkit-transform: translateX(4px);
+          transform: translateX(4px);
+}
+
+button:focus {
+  outline: none;
+}
+
 /*.navbar-expand-lg .navbar-nav .nav-link*/
 .navbar-brand img {
   width: 100px;
@@ -39,6 +54,10 @@ h5 {
 }
 
 .navbar-expand-lg .navbar-nav .nav-link:hover {
+  color: #0f59d2;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link:active {
   color: #0f59d2;
 }
 
