--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 html {
@@ -10,6 +11,14 @@ html {
 
 .header {
   background: #222 !important;
+}
+
+.sidebar {
+  background: #222 !important;
+  -webkit-box-shadow: 0px 4px 10px 0 #000;
+  box-shadow: 0px 4px 10px 0 #000;
+  height: 100vh;
+  max-width: 25%;
 }
 
 p {
@@ -49,22 +58,34 @@ button:focus {
   border-radius: 50%;
 }
 
-.navbar-expand-lg .navbar-nav .nav-link {
+.navbar-nav .nav-item:hover {
+  background-color: #f5f5f5;
+  color: #0f59d2;
+  border-radius: 10px;
+}
+
+.navbar-nav .nav-item:active {
+  background-color: #f5f5f5;
+  color: #0f59d2;
+  border-radius: 10px;
+}
+
+.navbar-nav .nav-link {
   color: #ddd;
 }
 
-.navbar-expand-lg .navbar-nav .nav-link:hover {
+.navbar-nav .nav-link:hover {
   color: #0f59d2;
 }
 
-.navbar-expand-lg .navbar-nav .nav-link:active {
+.navbar-nav .nav-link:active {
   color: #0f59d2;
 }
 
 /*---HOME PAGE---*/
 .img-left {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   border: 20px solid #5e5e5e;
   -webkit-box-shadow: 0px 4px 100px 0 #000;
   box-shadow: 0px 4px 100px 0 #000;
@@ -72,8 +93,8 @@ button:focus {
 
 @media (min-width: 768px) {
   .img-left {
-    width: 400px;
-    height: 400px;
+    width: 200px;
+    height: 200px;
   }
 }
 
@@ -82,13 +103,20 @@ button:focus {
 }
 
 .icons i {
-  font-size: 24px;
+  font-size: 18px;
   color: #0f59d2;
 }
 
 /*--ABOUT PAGE--*/
 #about {
-  background-color: rgba(51, 51, 51, 0.493);
+  height: 100vh;
+  padding-top: 15%;
+  padding-bottom: 15%;
+  background-color: #e9ecef;
+}
+
+#about-min {
+  background-color: #969595;
 }
 
 .work-content {
