--- a/css/main.scss
+++ b/css/main.scss
@@ -20,6 +20,7 @@ $background-color: #222;
   margin: 0;
   padding: 0;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 html {
@@ -28,6 +29,13 @@ html {
 
 .header {
   background: $background-color !important;
+}
+
+.sidebar {
+  background: $background-color !important;
+  @include box-shadow(0px, 4px, 10px, 0, #000);
+  height: 100vh;
+  max-width: 25%;
 }
 
 p {
@@ -67,31 +75,40 @@ button {
   }
 }
 
-.navbar-expand-lg {
-  .navbar-nav {
-    .nav-link {
-      color: $color;
+.navbar-nav {
+  .nav-item {
+    &:hover {
+      background-color: $color1;
+      color: #0f59d2;
+      border-radius: 10px;
+    }
+    &:active {
+      background-color: $color1;
+      color: #0f59d2;
+      border-radius: 10px;
+    }
+  }
+  .nav-link {
+    color: $color;
 
-      &:hover {
-        color: #0f59d2;
-      }
-      &:active {
-        color: #0f59d2;
-      }
+    &:hover {
+      color: #0f59d2;
+    }
+    &:active {
+      color: #0f59d2;
     }
   }
 }
-
 /*---HOME PAGE---*/
 .img-left {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   border: 20px solid $color4;
   @include box-shadow(0px, 4px, 100px, 0, #000);
 
   @media (min-width: 768px) {
-    width: 400px;
-    height: 400px;
+    width: 200px;
+    height: 200px;
   }
 }
 
@@ -101,16 +118,22 @@ button {
 
 .icons {
   i {
-    font-size: 24px;
+    font-size: 18px;
     color: #0f59d2;
   }
 }
 
 /*--ABOUT PAGE--*/
 #about {
-  background-color: rgba(51, 51, 51, 0.493);
+    height: 100vh;
+    padding-top: 15%;
+    padding-bottom: 15%;
+    background-color: #e9ecef;
 }
 
+#about-min {
+  background-color: $color3;
+}
 .work-content {
   background-color: #0f59d2;
 
